Update (Core2) Queries - Sakila - Jonathan Nunez.ipynb

--- a/(Core2) Queries - Sakila - Jonathan Nunez.ipynb
+++ b/(Core2) Queries - Sakila - Jonathan Nunez.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "8e32ead9",
    "metadata": {},
    "outputs": [
@@ -130,128 +130,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>MARY</td>\n",
-       "      <td>SMITH</td>\n",
-       "      <td>MARY.SMITH@sakilacustomer.org</td>\n",
-       "      <td>5</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PATRICIA</td>\n",
-       "      <td>JOHNSON</td>\n",
-       "      <td>PATRICIA.JOHNSON@sakilacustomer.org</td>\n",
-       "      <td>6</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>LINDA</td>\n",
-       "      <td>WILLIAMS</td>\n",
-       "      <td>LINDA.WILLIAMS@sakilacustomer.org</td>\n",
-       "      <td>7</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>BARBARA</td>\n",
-       "      <td>JONES</td>\n",
-       "      <td>BARBARA.JONES@sakilacustomer.org</td>\n",
-       "      <td>8</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ELIZABETH</td>\n",
-       "      <td>BROWN</td>\n",
-       "      <td>ELIZABETH.BROWN@sakilacustomer.org</td>\n",
-       "      <td>9</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>594</th>\n",
-       "      <td>TERRENCE</td>\n",
-       "      <td>GUNDERSON</td>\n",
-       "      <td>TERRENCE.GUNDERSON@sakilacustomer.org</td>\n",
-       "      <td>601</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>595</th>\n",
-       "      <td>ENRIQUE</td>\n",
-       "      <td>FORSYTHE</td>\n",
-       "      <td>ENRIQUE.FORSYTHE@sakilacustomer.org</td>\n",
-       "      <td>602</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>596</th>\n",
-       "      <td>FREDDIE</td>\n",
-       "      <td>DUGGAN</td>\n",
-       "      <td>FREDDIE.DUGGAN@sakilacustomer.org</td>\n",
-       "      <td>603</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>597</th>\n",
-       "      <td>WADE</td>\n",
-       "      <td>DELVALLE</td>\n",
-       "      <td>WADE.DELVALLE@sakilacustomer.org</td>\n",
-       "      <td>604</td>\n",
-       "      <td>London</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>598</th>\n",
-       "      <td>AUSTIN</td>\n",
-       "      <td>CINTRON</td>\n",
-       "      <td>AUSTIN.CINTRON@sakilacustomer.org</td>\n",
-       "      <td>605</td>\n",
+       "      <td>JOSEPH</td>\n",
+       "      <td>JOY</td>\n",
+       "      <td>JOSEPH.JOY@sakilacustomer.org</td>\n",
+       "      <td>312</td>\n",
        "      <td>London</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>599 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    first_name  last_name                                  email  address_id  \\\n",
-       "0         MARY      SMITH          MARY.SMITH@sakilacustomer.org           5   \n",
-       "1     PATRICIA    JOHNSON    PATRICIA.JOHNSON@sakilacustomer.org           6   \n",
-       "2        LINDA   WILLIAMS      LINDA.WILLIAMS@sakilacustomer.org           7   \n",
-       "3      BARBARA      JONES       BARBARA.JONES@sakilacustomer.org           8   \n",
-       "4    ELIZABETH      BROWN     ELIZABETH.BROWN@sakilacustomer.org           9   \n",
-       "..         ...        ...                                    ...         ...   \n",
-       "594   TERRENCE  GUNDERSON  TERRENCE.GUNDERSON@sakilacustomer.org         601   \n",
-       "595    ENRIQUE   FORSYTHE    ENRIQUE.FORSYTHE@sakilacustomer.org         602   \n",
-       "596    FREDDIE     DUGGAN      FREDDIE.DUGGAN@sakilacustomer.org         603   \n",
-       "597       WADE   DELVALLE       WADE.DELVALLE@sakilacustomer.org         604   \n",
-       "598     AUSTIN    CINTRON      AUSTIN.CINTRON@sakilacustomer.org         605   \n",
-       "\n",
-       "       city  \n",
-       "0    London  \n",
-       "1    London  \n",
-       "2    London  \n",
-       "3    London  \n",
-       "4    London  \n",
-       "..      ...  \n",
-       "594  London  \n",
-       "595  London  \n",
-       "596  London  \n",
-       "597  London  \n",
-       "598  London  \n",
-       "\n",
-       "[599 rows x 5 columns]"
+       "  first_name last_name                          email  address_id    city\n",
+       "0     JOSEPH       JOY  JOSEPH.JOY@sakilacustomer.org         312  London"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,8 +155,10 @@
     "\n",
     "SELECT c.first_name, c.last_name, c.email, \n",
     "\tc.address_id, ct.city\n",
-    "FROM customer as c, city as ct\n",
-    "WHERE ct.city_id = '312'\n",
+    "FROM customer as c\n",
+    "JOIN address AS a ON c.address_id = a.address_id\n",
+    "JOIN city AS ct ON ct.city_id = a.address_id\n",
+    "WHERE ct.city_id = '312';\n",
     "\n",
     "\"\"\"\n",
     "pd.read_sql(q1, engine)"
