Update (Core2) Queries - Sakila - Jonathan Nunez.ipynb

--- a/(Core2) Queries - Sakila - Jonathan Nunez.ipynb
+++ b/(Core2) Queries - Sakila - Jonathan Nunez.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8e32ead9",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>JOSEPH</td>\n",
-       "      <td>JOY</td>\n",
-       "      <td>JOSEPH.JOY@sakilacustomer.org</td>\n",
-       "      <td>312</td>\n",
+       "      <td>MATTIE</td>\n",
+       "      <td>HOFFMAN</td>\n",
+       "      <td>MATTIE.HOFFMAN@sakilacustomer.org</td>\n",
+       "      <td>256</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CECIL</td>\n",
+       "      <td>VINES</td>\n",
+       "      <td>CECIL.VINES@sakilacustomer.org</td>\n",
+       "      <td>517</td>\n",
        "      <td>London</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -141,11 +149,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  first_name last_name                          email  address_id    city\n",
-       "0     JOSEPH       JOY  JOSEPH.JOY@sakilacustomer.org         312  London"
+       "  first_name last_name                              email  address_id    city\n",
+       "0     MATTIE   HOFFMAN  MATTIE.HOFFMAN@sakilacustomer.org         256  London\n",
+       "1      CECIL     VINES     CECIL.VINES@sakilacustomer.org         517  London"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +166,7 @@
     "\tc.address_id, ct.city\n",
     "FROM customer as c\n",
     "JOIN address AS a ON c.address_id = a.address_id\n",
-    "JOIN city AS ct ON ct.city_id = a.address_id\n",
+    "JOIN city AS ct ON ct.city_id = a.city_id\n",
     "WHERE ct.city_id = '312';\n",
     "\n",
     "\"\"\"\n",
